sidecar/deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sidecar
  labels:
    istio-injection: enabled
