sidecar/deployment/book-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
  namespace: sidecar
  labels:
    app: book-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
        version: v1
    spec:
      containers:
        - name: book-service
          image: varunu2892/book-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: sidecar
  labels:
    app: book-service
spec:
  selector:
    app: book-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
