sidecar/deployment/k8s-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: istio
spec:
  controllerName: istio.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: book-service-gateway
  namespace: sidecar
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: book-service-route
  namespace: sidecar
spec:
  parentRefs:
    - name: book-service-gateway
      namespace: sidecar
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/books
      backendRefs:
        - name: book-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /actuator
      backendRefs:
        - name: book-service
          port: 80
