sidecar/deployment/peer-authentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: sidecar
spec:
  mtls:
    mode: STRICT

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-gateway
  namespace: sidecar
spec:
  selector:
    matchLabels:
      app: book-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sidecar/sa/book-service-gateway-istio"]
